[package]
name = "noc_macroquad"
version = "0.1.0"
edition = "2021"

[dependencies]
macroquad = "0.4"


[[example]]
name = "chapter1_1"
path = "examples/chapter1/chapter1_1.rs"

[[example]]
name = "chapter1_2"
path = "examples/chapter1/chapter1_2.rs"

[[example]]
name = "chapter1_3"
path = "examples/chapter1/chapter1_3.rs"

[[example]]
name = "chapter1_4"
path = "examples/chapter1/chapter1_4.rs"

[[example]]
name = "chapter1_5"
path = "examples/chapter1/chapter1_5.rs"

[[example]]
name = "chapter1_6"
path = "examples/chapter1/chapter1_6.rs"

[[example]]
name = "chapter1_7"
path = "examples/chapter1/chapter1_7.rs"
